[package]
name = "wew"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12"
url = "2.5.4"
mime_guess = "2.0.5"
winit = { version = "0.30", optional = true }
futures-util = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
windows = { version = "0.60.0", features = [
    "Win32",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
anyhow = "1"
bindgen = "0.72.0"
cc = { version = "1.2.27", features = ["parallel"] }

[features]
default = ["async", "winit", "tokio"]
async = ["dep:futures-util", "dep:async-trait"]
tokio = ["dep:tokio"]
winit = ["dep:winit"]

[workspace]
members = ["examples/*"]
